--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,40 @@ body {
 
 a {
     text-decoration: none;
+    color: currentColor;
 }
 
 ul {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
-
+h1, h2, h3, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .link {
     text-decoration: none;
 }
 address {
     all: unset;
 }
+button {
+    cursor: pointer;
+}
+
+
+
+.container {
+    max-width: 1470px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    outline: 2px solid red;
+}
+
+
 
 
 
