--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ button {
     padding-top: 120px;
     padding-bottom: 120px;
     margin: 0 auto;
-    outline: 2px solid red;
 }
 
 
@@ -51,6 +50,7 @@ button {
 .head {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc
 }
 .header-logo {
     color: var(--IRIS, #4D5AE5);
@@ -97,7 +97,9 @@ letter-spacing: 0.02em;
 
 /*-----------HERO------------*/
 
-
+.hero {
+     padding: 188px 0;
+}
 
 .hero-cont {
     padding: 188px 472px 292px 472px;
@@ -229,6 +231,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 max-width: 71px;
 margin-bottom: 17.5px;
+padding: 101.5px 1240px 189.5px 156px;
 }
 .foot-logo-studio {
     color: var(--IRIS, #f4f4fd);
