--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,18 @@ img {
     display: block;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 
 .container {
@@ -40,8 +52,6 @@ img {
     max-width: 1158px;
     padding-right: 156px;
     padding-left: 156px;
-    padding-top: 120px;
-    padding-bottom: 120px;
     margin: 0 auto;
 }
 
@@ -147,6 +157,11 @@ font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
 cursor: pointer;
+display: block;
+min-width: 169px;
+height: 56px;
+border: none;
+border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -156,6 +171,10 @@ cursor: pointer;
 
 /*-----------FEATURES----------*/
 
+.features {
+        padding-top: 120px;
+    padding-bottom: 120px;
+}
 .features-subtitle {
 color: var(--NAVY-BLUE, #2E2F42);
 font-size: 20px;
@@ -163,6 +182,11 @@ font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
 margin-bottom: 8px;
+}
+
+.features-list {
+    display: flex;
+    gap: 24px;
 }
 
 .features-item-text {
@@ -174,8 +198,11 @@ letter-spacing: 0.02em;
 
 /*-------OUR TEAM------*/
 .team {
-    background-color: #F4F4FD
+    background-color: #F4F4FD;
+        padding-top: 120px;
+    padding-bottom: 120px;
 }
+
 .team-title {
     color: var(--NAVY-BLUE, #2E2F42);
 text-align: center;
@@ -187,6 +214,12 @@ text-transform: capitalize;
 max-width: 162px;
 margin: 0 auto 72px;
 }
+
+.team-list-item {
+    display: flex;
+    gap: 24px;
+}
+
 .team-list {
     background-color: #FFFFFF
 }
