--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ margin-bottom: 8px;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+width: calc((100% - 72px) / 4);
 }
 
 /*-------OUR TEAM------*/
