--- a/css/styles.css
+++ b/css/styles.css
@@ -188,13 +188,15 @@ margin-bottom: 8px;
     display: flex;
     gap: 24px;
 }
+.features-item {
+    width: calc((100% - 72px) / 4);
+}
 
 .features-item-text {
     color: var(--SLATE, #434455);
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-width: calc((100% - 72px) / 4);
 }
 
 /*-------OUR TEAM------*/
