--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,9 @@ margin: 0 auto 72px;
 }
 
 .team-list {
-    background-color: #FFFFFF
+    background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-item-subtitle {
@@ -235,6 +237,7 @@ font-weight: 500;
 line-height: 1.20;
 letter-spacing: 0.02em;
 margin-bottom: 8px;
+text-align: center;
 }
 .team-item-text {
     color: var(--SLATE, #434455);
@@ -242,11 +245,19 @@ text-align: center;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+text-align: center; 
+}
+
+.name-prof {
+    padding: 32px 0;
+
 }
 
 /*-----Portfolio-------*/
 
-
+.portfolio {
+     padding-top: 120px; padding-bottom: 120px;
+}
 .portfolio-title {
     color: var(--NAVY-BLUE, #2E2F42);
 text-align: center;
