--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,17 @@ max-width: 218px;
 margin-bottom: 72px;
 }
 
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-item {
+    width: calc((100% - 48px) / 3);
+}
+
 .portfolio-subtitle {
     color: var(--NAVY-BLUE, #2E2F42);
 font-size: 20px;
@@ -285,10 +296,20 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
+.name-app {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+
+    
+}
+
 /*-------FOOTER---------*/
 
 .foot {
     background: var(--NAVY-BLUE, #2E2F42);
+    padding: 100px 0;
+
 }
 .foot-logo {
     color: var(--CLOUD, #4d5ae5);
@@ -299,8 +320,9 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 max-width: 71px;
-margin-bottom: 17.5px;
+margin-bottom: 16px;
 padding: 101.5px 1240px 189.5px 156px;
+display: inline-block;
 }
 .foot-logo-studio {
     color: var(--IRIS, #f4f4fd);
