--- a/css/styles.css
+++ b/css/styles.css
@@ -144,12 +144,9 @@ letter-spacing: 0.02em;
 
 .hero {
      padding: 188px 0;
+    background: var(--NAVY-BLUE, #2E2F42);
 }
 
-.hero-cont {
-    padding: 188px 472px 292px 472px;
-    background: var(--NAVY-BLUE, #2E2F42);    
-}
 
 .hero-title {
     color: var(--WHITE, #FFF);
@@ -158,7 +155,7 @@ font-size: 56px;
 font-weight: 700;
 line-height: 1.07;
 letter-spacing: 0.02em;
-margin-bottom: 48px;
+margin: 0 auto 48px;
 max-width: 496px;
 }
 
@@ -223,8 +220,6 @@ letter-spacing: 0.02em;
 /*-------OUR TEAM------*/
 .team {
     background-color: #F4F4FD;
-        padding-top: 120px;
-    padding-bottom: 120px;
 }
 
 .team-title {
@@ -281,9 +276,6 @@ text-align: center;
 
 /*-----Portfolio-------*/
 
-.portfolio {
-     padding-top: 120px; padding-bottom: 120px;
-}
 
 .portfolio-title {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -351,7 +343,6 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 max-width: 71px;
 margin-bottom: 16px;
-padding: 101.5px 1240px 189.5px 156px;
 display: inline-block;
 white-space: nowrap;
 }
