--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,8 @@ letter-spacing: 0.02em;
 /*-------OUR TEAM------*/
 .team {
     background-color: #F4F4FD;
+        padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .team-title {
@@ -276,6 +278,10 @@ text-align: center;
 
 /*-----Portfolio-------*/
 
+.portfolio {
+    padding-top: 120px; 
+    padding-bottom: 120px;
+}
 
 .portfolio-title {
     color: var(--NAVY-BLUE, #2E2F42);
